--- a/src/components/header/Header.component.styles.scss
+++ b/src/components/header/Header.component.styles.scss
@@ -1,8 +1,10 @@
 .header {
-  height: 120px;
+  height: 100px;
   width: 100%;
+  padding: 0 2rem;
+  background: #fff;
 
   &__logo {
-    padding: 0 20px;
+    width: 50px;
   }
 }
