bodega - done shop page, checkout page - fixed value in cartItem - fixed selectable menu item - added button payment

--- a/src/pages/checkout/CheckOut.component.scss
+++ b/src/pages/checkout/CheckOut.component.scss
@@ -45,4 +45,13 @@
     font-size: 36px;
     color: black;
   }
+
+  .checkout-payment {
+    width: 100%;
+    &__button {
+      border: 1px solid black;
+      color: black;
+      border-radius: 10px;
+    }
+  }
 }
