bodega-store - modal user update information - modal checkout payment

--- a/src/components/header/Header.component.styles.scss
+++ b/src/components/header/Header.component.styles.scss
@@ -11,4 +11,12 @@
   &__logo {
     width: 50px;
   }
+
+  &__info {
+    display: flex;
+
+    & > *:last-child {
+      margin-left: 15px;
+    }
+  }
 }
