--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ html,body {
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
 
 
@@ -13,7 +14,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
 }
-
 
 .main-layout {
   display: flex;
@@ -50,4 +50,10 @@ nav li a {
 .nav-active {
   color: grey;
   transition: all .3s ease-out;
+}
+
+.spinner {
+  position: absolute;
+  top: 45%;
+  left: 50%;
 }
