bodega-store - done report - pull out strict mode - sale redux - saleReport service - fixed minHeight scss

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,3 +57,13 @@ nav li a {
   top: 45%;
   left: 50%;
 }
+
+.flex-nowrap {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.justify-content-center {
+  justify-content: center !important;
+}
