--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,10 @@
     flex-wrap: nowrap;
 }
 
+.justify-content-center {
+    justify-content: center !important;
+}
+
 .justify-content-between {
     justify-content: space-between !important;
 }
