--- a/src/App.scss
+++ b/src/App.scss
@@ -53,9 +53,16 @@ nav li a {
 }
 
 .spinner {
+  width: 100%;
+  height: 100vh;
   position: absolute;
-  top: 45%;
-  left: 50%;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.8);
+  opacity: 0.8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-nowrap {
@@ -64,6 +71,28 @@ nav li a {
   flex-wrap: nowrap;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
 .justify-content-center {
   justify-content: center !important;
+}
+
+.color-black {
+  color: black;
+}
+
+.mr-10 {
+  margin-right: 10px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+.bold {
+  font-weight: bold;
 }
