--- a/src/components/sign-in/SignIn.component.scss
+++ b/src/components/sign-in/SignIn.component.scss
@@ -3,6 +3,14 @@
   display: flex;
   flex-direction: column;
   color: black;
+  justify-content: center;
+  align-items: center;
+
+  &-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 
   .title {
     margin: 10px 0;
