--- a/src/pages/checkout/CheckOut.component.scss
+++ b/src/pages/checkout/CheckOut.component.scss
@@ -47,5 +47,27 @@
 
   .checkout-payment {
     width: 100%;
+    margin-top: 20px;
+
+    div {
+      flex: 1;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 20px;
+    }
+
+    &--button {
+
+      &-paypal {
+        flex: 1;
+        cursor: pointer;
+        width: 100%;
+        border: none;
+        background-color: red;
+        border-radius: 5px;
+        margin-top: 0;
+        height: 45px;
+      }
+    }
   }
 }
