develop - feature: added logout menu in sidebar with functionality - fix: validate user already logged in before pay with Google - feature: improvement in responsive design in checkout and user information component

--- a/src/App.scss
+++ b/src/App.scss
@@ -108,3 +108,14 @@ nav li a {
     color: black;
   }
 }
+
+.sidebar {
+  position: relative;
+
+  &__logout {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
